# daft-structured-outputs

./: .env.example  FRICTION_LOG.md  README.md  makefile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
canon/: llm_generate_so_vllm_online.ipynb
friction/: issue_5041_mre.py  issue_5083_mre.py  issue_5088_mre.py  trying_to_hack_llm_generate_for_images.ipynb
references/vllm/: vllm_structured_outputs.py
tests/: test_llm_generate_text.py  test_model_openai_vllm_integration.py  test_openai_vllm_integration.py  test_unit_sanity.py
workload/: Daft_Canonical_Workload_Gemma 3_vLLM.ipynb  Daft_Canonical_Workload_Gemma3_vLLM.ipynb  Daft_Structured_Outputs_Gemma3_vLLM.ipynb  daft_image_oai_vllm_structured_outputs_udf.py  daft_mm_so_gemma3.py  daft_vllm_oai_structured_outputs_all.ipynb  llm_generate_oai_so_examples.ipynb  llm_generate_vllm_provider_examples.ipynb  llm_generate_vllm_provider_so.ipynb  llm_generate_vllm_so_examples copy.ipynb  structured_outputs_examples.ipynb  structured_outputs_workload.py
