[project]
name = "daft-structured-outputs"
version = "0.1.0"
description = "A Week of Structured Outputs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daft[huggingface,ray]",
    "openai",
    "pydantic",
    "vllm",
    "python-dotenv",
    "ipykernel",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
]


